Rework selectors example code, and assocaiated parts of test web app. Also start to cleanup web forms for future module

--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -32,10 +32,10 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         li.nav-item
           a(href='/' aria-current='page').nav-link.active Home
         //
-        // Locators
+        // Selectors
         //  
         li.nav-item
-          a(href='/locators').nav-link Locators
+          a(href='/selectors').nav-link Selectors
         //
         // Assertions
         //  
