Update web forms tests and page-objects, also update snapshot for assertion test

--- a/views/webform-post.pug
+++ b/views/webform-post.pug
@@ -46,6 +46,9 @@ html
         p
         p Password:
         input(type="password" id="password" name="password" placeholder="").form-control.w-25
+        p 
+        label.form-label Color:
+        input(type="color" id="color" name="color" style=" height: 40px").form-control.form-control-color
         p
         p Range:
         input(type="range" id="range" name="range").form-control-range
